--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       <a href="index.html" class="logo d-flex align-items-center">
         <!-- Uncomment the line below if you also wish to use an image logo -->
         <img src="assets/img/logo.svg" alt="Logo">
-        <h1 class="sitename">Novasoftsol</h1>
+        <h1 class="sitename">Nova Software Solutions</h1>
       </a>
 
       <nav id="navmenu" class="navmenu">
@@ -449,7 +449,7 @@
           <ul class="portfolio-filters isotope-filters" data-aos="fade-up" data-aos-delay="100">
             <li data-filter="*" class="filter-active">All</li>
             <li data-filter=".filter-app">App</li>
-            <li data-filter=".filter-product">Card</li>
+            <!-- <li data-filter=".filter-product">Card</li> -->
             <li data-filter=".filter-branding">Web</li>
           </ul><!-- End Portfolio Filters -->
 
@@ -465,7 +465,7 @@
               </div>
             </div><!-- End Portfolio Item -->
 
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-product">
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-branding">
               <img src="assets/img/2.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Website</h4>
@@ -485,7 +485,7 @@
               </div>
             </div><!-- End Portfolio Item -->
 
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-branding">
               <img src="assets/img/4.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Website</h4>
@@ -495,7 +495,7 @@
               </div>
             </div><!-- End Portfolio Item -->
 
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-product">
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-branding">
               <img src="assets/img/5.png" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Website</h4>
@@ -515,7 +515,7 @@
               </div>
             </div><!-- End Portfolio Item -->
 
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-branding">
               <img src="assets/img/7.png" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Website</h4>
@@ -525,7 +525,7 @@
               </div>
             </div><!-- End Portfolio Item -->
 
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-product">
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-branding">
               <img src="assets/img/8.png" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Website</h4>
@@ -607,7 +607,7 @@
                 </p>
               </div>
             </div><!-- End testimonial item -->
-    
+
             <div class="swiper-slide">
               <div class="testimonial-item">
                 <img src="assets/img/testimonials/testimonials-2.jpg" class="testimonial-img" alt="">
@@ -710,7 +710,7 @@
               <i class="bi bi-geo-alt flex-shrink-0"></i>
               <div>
                 <h3>Address</h3>
-                <p>Amsterdam, North Holland, Netherlands</p>
+                <p>Lahore, Pakistan</p>
               </div>
             </div><!-- End Info Item -->
 
@@ -776,13 +776,13 @@
     <div class="container">
       <h3 class="sitename">Nova Software Solutions</h3>
       <p>Your trusted partner in cutting-edge software solutions. From bespoke web development to advanced AI applications, we deliver excellence and innovation in every project.</p>
-      <div class="social-links d-flex justify-content-center">
+      <!-- <div class="social-links d-flex justify-content-center">
         <a href="https://twitter.com/yourprofile" target="_blank" rel="noopener noreferrer"><i class="bi bi-twitter"></i></a>
         <a href="https://facebook.com/yourprofile" target="_blank" rel="noopener noreferrer"><i class="bi bi-facebook"></i></a>
         <a href="https://instagram.com/yourprofile" target="_blank" rel="noopener noreferrer"><i class="bi bi-instagram"></i></a>
         <a href="https://skype.com/yourprofile" target="_blank" rel="noopener noreferrer"><i class="bi bi-skype"></i></a>
         <a href="https://linkedin.com/in/yourprofile" target="_blank" rel="noopener noreferrer"><i class="bi bi-linkedin"></i></a>
-      </div>
+      </div> -->
       <div class="container">
         <div class="copyright">
           <span>Copyright</span> <strong class="px-1 sitename">Nova Software Solutions</strong> <span>All Rights Reserved</span>
